# Geracao_Certificados_DACC

./: .gitignore  .~lock.certificado_gerado.docx#  Makefile  README.md  certificado_gerado.docx  entities.py  extractor.py  gera_certificado.py  modelo_certificado.docx  pyproject.toml
certificate_generator/: __main__.py  entities.py  extractor.py  gera_certificado.py
certificate_generator/drive/: __main__.py  export.py  file_tree.py  setup.py  spreadsheet.py
